--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+applescript
+astor
 baidu_aip
 bs4
 deep-translator
 easyocr
 jieba
+libcst
 loguru
 mammoth
 matplotlib
 natsort
 numpy
+paddleocr
+prettytable
+psutil
+pypandoc
+pyperclip
 pyqt6
 pytesseract
 python-docx
 qtawesome
+ruamel.yaml
 scipy
-stdlib_list
+spacy
 torch
 webcolors
 xmltodict
