--- a/MomoHanhuaUserData/MomoTranslator_config.yml
+++ b/MomoHanhuaUserData/MomoTranslator_config.yml
@@ -3,7 +3,7 @@ step_str: '1'
 #thread_method: 'queue'
 thread_method: 'concurrent'
 pic_thread_method: 'concurrent'
-#do_mode: 'do_qt'
+do_mode: 'do_qt'
 #do_mode: 'do_dev_folder'
 #do_mode: 'do_dev_pic'
 folder_name: 'A Righteous Thirst for Vengeance 002'
