--- a/MomoHanhuaUserData/MomoTranslator_config.yml
+++ b/MomoHanhuaUserData/MomoTranslator_config.yml
@@ -6,13 +6,15 @@ pic_thread_method: 'concurrent'
 do_mode: 'do_qt'
 #do_mode: 'do_dev_folder'
 #do_mode: 'do_dev_pic'
+docx_img_format: 'jpeg'
+#docx_img_format: 'png'
 folder_name: 'A Righteous Thirst for Vengeance 002'
 area_folder_name: 'Phantom Road 001'
 #browser: 'Safari'
 browser: 'Google Chrome'
 thumb_size: 240
 window_size: 1200,800
-WBLDN_padding: 120,60,60,40,50
+WBLDN_padding: 10,30,30,20,40
 stem_level: 3
 media_lang: 'English'
 target_lang: 'zh-CN'
@@ -78,16 +80,16 @@ frame_settings:
 #  fully_framed: false
 bubble_condition:
   area_range: '100~1000000'
-  perimeter_range: '50~40000'
+  perimeter_range: '10~40000'
   thickness_range: '4~4000'
-  br_w_range: '20~6000'
-  br_h_range: '20~6000'
-  br_wh_range: '20~6000'
-  br_wnh_range: '30~6000'
+  br_w_range: '50~6000'
+  br_h_range: '30~6000'
+  br_wh_range: '40~6000'
+  br_wnh_range: '40~6000'
   br_w_ratio_range: '0.005~0.95'
   br_h_ratio_range: '0.005~0.95'
-  br_ratio_range: '0.1~1.1'
-  portion_ratio_range: '0.0002~0.5'
+  br_ratio_range: '0.02~1.1'
+  portion_ratio_range: '0.00002~0.5'
   area_perimeter_ratio_range: '0.0005~0.1'
   bubble_px_range: '10~1000000'
   letter_px_range: '3~1000000'
@@ -97,25 +99,28 @@ bubble_condition:
   mask_px_ratio_range: '0.01~0.8'
   edge_px_count_range: '0~15'
   letter_area_range: '1~2000'
-  textblock_area_range: '1~3000000'
+  textblock_area_range: '100~3000000'
+  textblock_wrange: '100~1000'
+  textblock_hrange: '10~1000'
   letter_cnts_range: '1~900'
   textblock_letters_range: '1~1000'
   note_area_range: '10~6000'
   max_note_dist: 5
   intersect_ratio: 0.8
   seg_line_range: '50~500'
-  angle_px_step: 2,50
+  angle_px_step: 2,5
   WBN_tolerance: 10,30,15
 char_condition:
   px_area_range: '10~3000'
   cnt_area_range: '10~3000'
   thick_range: '4~4000'
-  brw_range: '28~40'
-  brh_range: '60~700'
+  brw_range: '8~100'
+  brh_range: '15~700'
 bubble_recognize:
-  WLB_ext_px: 10,20,10
+  WLB_ext_px: 8,30,5
+#  WLB_ext_px: 6,10,5
   # 用户设置的高度差异阈值
-  max_height_diff: 20
+  max_height_diff: 30
   max_font_size: 150
   kernel_depth: 10
   block_ratio: 2
@@ -132,8 +137,8 @@ bubble_seg:
   check_note: false
 #  check_dots: true
   check_dots: false
-  check_intact: true
-#  check_intact: false
+#  check_intact: true
+  check_intact: false
   use_pivot_split: true
 #  use_pivot_split: false
 ocr_settings:
@@ -185,7 +190,7 @@ color_patterns:
 #  - 'e5398b-15=50396d-15~ffffff-60' # 红紫底白字
 color_pattern_dic:
   Comic:
-    - 'ffffff-5~000000-60' # 白底黑字
+    - 'ffffff-10~000000-60' # 白底黑字
 #    - '000000-15~ffffff-60' # 黑底白字
 #    - 'ffffff-60' # 白字
 #    - '000000-60' # 黑字
