--- a/MomoHanhuaUserData/MomoTranslator_config.yml
+++ b/MomoHanhuaUserData/MomoTranslator_config.yml
@@ -1,6 +1,6 @@
-img_ind: 3
+img_ind: 1
 #step_str: '012345678'
-step_str: '3'
+step_str: '4'
 #thread_method: 'queue'
 thread_method: 'concurrent'
 pic_thread_method: 'concurrent'
@@ -9,13 +9,18 @@ do_mode: 'do_qt'
 #do_mode: 'do_dev_pic'
 docx_img_format: 'jpeg'
 #docx_img_format: 'png'
-folder_name: 'Almighty 002'
-area_folder_name: 'Drifter 015'
+folder_name: 'Avengers 002'
+#folder_name: 'Gasolina 005'
+#folder_name: "Panya - The Mummy's Curse 001"
+area_folder_names:
+  - 'Avengers 001'
+#  - 'Batman - Catwoman - The Gotham War 001'
+#  - 'Gasolina 002'
 #browser: 'Safari'
 browser: 'Google Chrome'
 thumb_size: 240
 window_size: 1200,800
-WBLDN_padding: 60,60,30,20,40
+WBLDN_padding: 60,90,90,90,40
 stem_level: 3
 media_lang: 'English'
 target_lang: 'zh-CN'
@@ -25,6 +30,7 @@ default_dpi: 150
 lettering:
   global_font_size: 30
   global_font_name: '微软雅黑'
+#  global_font_name: '思源黑体'
   #global_font_name: '方正兰亭黑'
 #  global_rec_font_name: '方正粗宋'
   global_rec_font_name:
@@ -37,6 +43,7 @@ font_dic:
   水木明淙: '水木明淙.TTF'
   方正诗甜宋: '方正诗甜宋 简 Medium.TTF'
   方正雪炜锐黑: '方正雪炜锐黑 简.TTF'
+  思源黑体: 'NotoSansHans-Regular.otf'
 chatgpt:
   # 是否允许控制浏览器
   do_automate: true
@@ -48,6 +55,7 @@ long_pic:
 #  single_width_min: 1900
   single_width_min: 2000
   group_len: 4
+#  group_len: 6
 frame_settings:
   frame_color:
 #  frame_color: '000000'
@@ -83,26 +91,32 @@ bubble_condition:
   area_range: '100~1000000'
   perimeter_range: '10~40000'
   thickness_range: '4~4000'
-  br_w_range: '50~6000'
-  br_h_range: '30~6000'
-  br_wh_range: '40~6000'
+  br_w_range: '90~6000'
+  br_h_range: '60~6000'
+  br_wh_range: '20~6000'
   br_wnh_range: '40~6000'
   br_w_ratio_range: '0.005~0.95'
   br_h_ratio_range: '0.005~0.95'
   br_ratio_range: '0.02~1.1'
+#  br_ratio_range: '0.02~0.9' #非矩形
+#  br_ratio_range: '0.9~1.1' #矩形
+  br_w_percent_range: '0~1'
+#  br_w_percent_range: '0.05~0.4'
+  br_h_percent_range: '0.001~0.999'
   portion_ratio_range: '0.00002~0.5'
   area_perimeter_ratio_range: '0.0005~0.1'
-  bubble_px_range: '100~1000000'
-  letter_px_range: '100~1000000'
-  bubble_px_ratio_range: '0.5~1.1'
-  letter_px_ratio_range: '0.001~0.5'
+  bubble_px_range: '20~1000000'
+#  letter_px_range: '280~1000000'
+  letter_px_range: '30~1000000'
+  bubble_px_ratio_range: '0.1~1.1'
+  letter_px_ratio_range: '0.008~0.9'
   BnL_px_ratio_range: '0.6~1.1'
-  mask_px_ratio_range: '0.01~0.8'
+  mask_px_ratio_range: '0.008~0.8'
   edge_px_count_range: '0~15'
-  letter_area_range: '1~2000'
+  letter_area_range: '1~9000'
   textblock_area_range: '1~3000000'
-  textblock_wrange: '1~1000'
-  textblock_hrange: '3~1000'
+  textblock_wrange: '300~1000'
+  textblock_hrange: '10~600'
   letter_cnts_range: '1~900'
   textblock_letters_range: '1~1000'
   note_area_range: '10~6000'
@@ -112,16 +126,16 @@ bubble_condition:
   angle_px_step: 2,10
   WBN_tolerance: 10,30,15
 char_condition:
-  px_area_range: '10~3000'
-  cnt_area_range: '10~3000'
+  px_area_range: '10~30000'
+  cnt_area_range: '10~30000'
   thick_range: '4~4000'
-  brw_range: '12~100'
-  brh_range: '12~700'
+  brw_range: '12~5000'
+  brh_range: '12~7000'
 bubble_recognize:
-#  WLB_ext_px: 10,88,15
-  WLB_ext_px: 4,40,10
+#  WLB_ext_px: 6,15,4
+  WLB_ext_px: 6,50,15
   # 用户设置的高度差异阈值
-  max_height_diff: 12
+  max_height_diff: 28
   max_font_size: 150
   kernel_depth: 10
   block_ratio: 2
@@ -144,7 +158,7 @@ bubble_seg:
 #  use_pivot_split: false
 ocr_settings:
   discard_ratio: 0.08
-  bold_thres: 1.2
+  bold_thres: 1.15
   y_thres: 8
   bit_thres: 127
 #  print_tables: true
@@ -174,13 +188,16 @@ custom_ocr_engines:
 #  - 'Baidu'
 #  - 'BaiduAccu'
   - 'Paddle'
-#  - 'Easy'
+  - 'Easy'
 prompt_prefix: '你是一名职业翻译，现在你的任务是翻译漫画，请把下列html翻译成中文，保留原格式，并以html格式输出。人名和专有名词也要翻译成中文。'
 grid_ratio_dic:
   Manga: 0.90 # 日漫黑白
   Comic: 0.90 # 美漫彩色
 italic_color_locates:
   - 'fbab3c-fff3e5-000000'
+  - 'ccecc3-36b449'
+  - 'fdfdbd-000000'
+  - '0d0d0d-ffffff'
 color_patterns:
 #  - 'ffffff-15~9f2862-15' # 白底红字
 #  - 'b9e6fb-15~000000-60' # 蓝底黑字
@@ -195,8 +212,8 @@ color_patterns:
 color_pattern_dic:
   Comic:
     - 'ffffff-15~000000-60' # 白底黑字
-#    - '000000-15~ffffff-60' # 黑底白字
+#    - '000000-45~ffffff-60' # 黑底白字
 #    - 'ffffff-60' # 白字
 #    - '000000-60' # 黑字
   Manga:
-    - 'ffffff-15~000000-60' # 白底黑字
+#    - 'ffffff-15~000000-60' # 白底黑字
