--- a/MomoHanhuaUserData/MomoTranslator_config.yml
+++ b/MomoHanhuaUserData/MomoTranslator_config.yml
@@ -1,33 +1,33 @@
-img_ind: 1
+img_ind: 4
 #step_str: '012345678'
 step_str: '4'
 #thread_method: 'queue'
 thread_method: 'concurrent'
+#pic_thread_method: 'queue'
 pic_thread_method: 'concurrent'
 do_mode: 'do_qt'
 #do_mode: 'do_dev_folder'
 #do_mode: 'do_dev_pic'
 docx_img_format: 'jpeg'
 #docx_img_format: 'png'
-folder_name: 'Avengers 002'
+#folder_name: 'Avengers 002'
+#folder_name: 'Drifter 018'
+#folder_name: 'Exorsisters 005'
 #folder_name: 'Gasolina 005'
-#folder_name: "Panya - The Mummy's Curse 001"
+folder_name: 'G.O.D.S. 002'
 area_folder_names:
-  - 'Avengers 001'
+#  - 'Avengers 001'
 #  - 'Batman - Catwoman - The Gotham War 001'
+#  - 'Drifter 015'
 #  - 'Gasolina 002'
-#browser: 'Safari'
-browser: 'Google Chrome'
-thumb_size: 240
-window_size: 1200,800
-WBLDN_padding: 60,90,90,90,40
-stem_level: 3
-media_lang: 'English'
-target_lang: 'zh-CN'
+#  - 'G.O.D.S. 001'
 #default_dpi: 300
 default_dpi: 150
 #default_dpi: 96
+#WLB_ext_px: 3,8,8
+WLB_ext_px: 5,15,15
 lettering:
+#  global_font_size: 20
   global_font_size: 30
   global_font_name: '微软雅黑'
 #  global_font_name: '思源黑体'
@@ -36,6 +36,16 @@ lettering:
   global_rec_font_name:
   global_spacing:
   # global_spacing: 2
+  check_len: 40
+#browser: 'Safari'
+browser: 'Google Chrome'
+thumb_size: 240
+window_size: 1200,800
+WBLDN_padding: 60,90,90,90,40
+#WBLDN_padding: 90,90,90,90,90
+stem_level: 3
+media_lang: 'English'
+target_lang: 'zh-CN'
 font_dic:
   微软雅黑: 'msyh.ttc'
   方正兰亭黑: '方正兰亭黑_GBK.ttf'
@@ -47,7 +57,7 @@ font_dic:
 chatgpt:
   # 是否允许控制浏览器
   do_automate: true
-  # do_automate: false
+#  do_automate: false
   sleep_minute: 2
   gpt_line_max: 40
   gpt_char_max: 1500
@@ -78,45 +88,49 @@ frame_settings:
   gaps: [15, 6, 8, 8]
 #  gaps: 0
   # 是否检查由多种颜色构成漫画画格框架
-  #check_second_color: true
-  check_second_color: false
+  #check_2nd_color: true
+  check_2nd_color: false
   # 是否使用多种颜色检测漫画画格
   #check_more_frame_color: true
   check_more_frame_color: false
-#  y_first: true
-  y_first: false
+#  y_1st: true
+  y_1st: false
   fully_framed: true
 #  fully_framed: false
 bubble_condition:
   area_range: '100~1000000'
   perimeter_range: '10~40000'
   thickness_range: '4~4000'
-  br_w_range: '90~6000'
-  br_h_range: '60~6000'
+  br_w_range: '60~6000'
+  br_h_range: '30~6000'
   br_wh_range: '20~6000'
   br_wnh_range: '40~6000'
-  br_w_ratio_range: '0.005~0.95'
-  br_h_ratio_range: '0.005~0.95'
-  br_ratio_range: '0.02~1.1'
-#  br_ratio_range: '0.02~0.9' #非矩形
-#  br_ratio_range: '0.9~1.1' #矩形
+  br_w_rarange: '0.005~0.95'
+  br_h_rarange: '0.005~0.95'
+  br_rarange: '0.02~1.1'
+#  br_rarange: '0.02~0.9' #非矩形
+#  br_rarange: '0.9~1.1' #矩形
   br_w_percent_range: '0~1'
 #  br_w_percent_range: '0.05~0.4'
   br_h_percent_range: '0.001~0.999'
-  portion_ratio_range: '0.00002~0.5'
-  area_perimeter_ratio_range: '0.0005~0.1'
+  portion_rarange: '0.00002~0.5'
+  area_perimeter_rarange: '0.0005~0.1'
   bubble_px_range: '20~1000000'
 #  letter_px_range: '280~1000000'
-  letter_px_range: '30~1000000'
-  bubble_px_ratio_range: '0.1~1.1'
-  letter_px_ratio_range: '0.008~0.9'
-  BnL_px_ratio_range: '0.6~1.1'
-  mask_px_ratio_range: '0.008~0.8'
+  letter_px_range: '10~1000000'
+  bubble_px_rarange: '0.5~1.1'
+  letter_px_rarange: '0.008~0.9'
+  BnL_px_rarange: '0.5~1.1'
+  mask_px_rarange: '0.005~0.8'
   edge_px_count_range: '0~15'
   letter_area_range: '1~9000'
   textblock_area_range: '1~3000000'
-  textblock_wrange: '300~1000'
+  textblock_wrange: '30~1000'
   textblock_hrange: '10~600'
+  textblock_w_percent_range: '0~1'
+#  textblock_w_percent_range: '0.3~1'
+  textblock_h_percent_range: '0.001~0.999'
+#  textblock_h_percent_range: '0.8~0.92'
   letter_cnts_range: '1~900'
   textblock_letters_range: '1~1000'
   note_area_range: '10~6000'
@@ -129,11 +143,9 @@ char_condition:
   px_area_range: '10~30000'
   cnt_area_range: '10~30000'
   thick_range: '4~4000'
-  brw_range: '12~5000'
-  brh_range: '12~7000'
+  brw_range: '5~5000'
+  brh_range: '5~7000'
 bubble_recognize:
-#  WLB_ext_px: 6,15,4
-  WLB_ext_px: 6,50,15
   # 用户设置的高度差异阈值
   max_height_diff: 28
   max_font_size: 150
@@ -143,6 +155,7 @@ bubble_recognize:
   bg_alpha: 0.5
   WLB_alpha: 30,50,30
   padding: 10
+  r_dot: 5
 bubble_seg:
 #  all_caps: true
   all_caps: false
@@ -159,8 +172,11 @@ bubble_seg:
 ocr_settings:
   discard_ratio: 0.08
   bold_thres: 1.15
+#  bold_thres: 1.6
   y_thres: 8
   bit_thres: 127
+  font_size_range: '20~80'
+  font_size_rarange: '0.65~1.15'
 #  print_tables: true
   print_tables: false
   #init_ocr: true
@@ -168,6 +184,8 @@ ocr_settings:
   use_textwords: true
 #  use_textwords: false
   stitch_spacing: 50
+#  merge_update: true
+  merge_update: false
 youdao:
   app_id:
   app_key:
@@ -212,7 +230,8 @@ color_patterns:
 color_pattern_dic:
   Comic:
     - 'ffffff-15~000000-60' # 白底黑字
-#    - '000000-45~ffffff-60' # 黑底白字
+#    - 'ffffff-30~000000-120' # 白底黑字
+#    - '000000-15~ffffff-60' # 黑底白字
 #    - 'ffffff-60' # 白字
 #    - '000000-60' # 黑字
   Manga:
