--- a/MomoHanhuaUserData/MomoTranslator_config.yml
+++ b/MomoHanhuaUserData/MomoTranslator_config.yml
@@ -1,33 +1,27 @@
-img_ind: 4
+img_ind: 13
 #step_str: '012345678'
-step_str: '4'
-#thread_method: 'queue'
+step_str: '5'
+# thread_method: 'queue'
 thread_method: 'concurrent'
-#pic_thread_method: 'queue'
+# pic_thread_method: 'queue'
 pic_thread_method: 'concurrent'
 do_mode: 'do_qt'
-#do_mode: 'do_dev_folder'
-#do_mode: 'do_dev_pic'
+# do_mode: 'do_dev_folder'
+# do_mode: 'do_dev_pic'
 docx_img_format: 'jpeg'
 #docx_img_format: 'png'
-#folder_name: 'Avengers 002'
-#folder_name: 'Drifter 018'
-#folder_name: 'Exorsisters 005'
-#folder_name: 'Gasolina 005'
-folder_name: 'G.O.D.S. 002'
+folder_name: 'Avengers 002'
 area_folder_names:
 #  - 'Avengers 001'
-#  - 'Batman - Catwoman - The Gotham War 001'
-#  - 'Drifter 015'
-#  - 'Gasolina 002'
-#  - 'G.O.D.S. 001'
 #default_dpi: 300
 default_dpi: 150
-#default_dpi: 96
+# default_dpi: 96
 #WLB_ext_px: 3,8,8
-WLB_ext_px: 5,15,15
+# WLB_ext_px: 5,12,12
+WLB_ext_px: 5,20,15
+# WLB_ext_px: 10,40,30
 lettering:
-#  global_font_size: 20
+#   global_font_size: 20
   global_font_size: 30
   global_font_name: '微软雅黑'
 #  global_font_name: '思源黑体'
@@ -41,8 +35,17 @@ lettering:
 browser: 'Google Chrome'
 thumb_size: 240
 window_size: 1200,800
-WBLDN_padding: 60,90,90,90,40
-#WBLDN_padding: 90,90,90,90,90
+WBLDN_padding: 30,90,90,90,40
+# WBLDN_padding: 90,90,90,90,90
+# WBLDN_padding: 120,120,120,120,120
+font_size_range_dic:
+  default: '25~60'
+  'ffffff-000000': '25~60'
+font_size_rarange: '0.65~1.25'
+bold_thres_dic:
+  default: 1.15
+  'ffffff-000000': 1.2
+  '3948a5-ffffff': 1.5
 stem_level: 3
 media_lang: 'English'
 target_lang: 'zh-CN'
@@ -57,7 +60,7 @@ font_dic:
 chatgpt:
   # 是否允许控制浏览器
   do_automate: true
-#  do_automate: false
+#   do_automate: false
   sleep_minute: 2
   gpt_line_max: 40
   gpt_char_max: 1500
@@ -101,7 +104,7 @@ bubble_condition:
   area_range: '100~1000000'
   perimeter_range: '10~40000'
   thickness_range: '4~4000'
-  br_w_range: '60~6000'
+  br_w_range: '30~6000'
   br_h_range: '30~6000'
   br_wh_range: '20~6000'
   br_wnh_range: '40~6000'
@@ -112,14 +115,14 @@ bubble_condition:
 #  br_rarange: '0.9~1.1' #矩形
   br_w_percent_range: '0~1'
 #  br_w_percent_range: '0.05~0.4'
-  br_h_percent_range: '0.001~0.999'
+  br_h_percent_range: '0~1'
   portion_rarange: '0.00002~0.5'
   area_perimeter_rarange: '0.0005~0.1'
   bubble_px_range: '20~1000000'
 #  letter_px_range: '280~1000000'
-  letter_px_range: '10~1000000'
+  letter_px_range: '3~1000000'
   bubble_px_rarange: '0.5~1.1'
-  letter_px_rarange: '0.008~0.9'
+  letter_px_rarange: '0.0008~0.9'
   BnL_px_rarange: '0.5~1.1'
   mask_px_rarange: '0.005~0.8'
   edge_px_count_range: '0~15'
@@ -129,7 +132,7 @@ bubble_condition:
   textblock_hrange: '10~600'
   textblock_w_percent_range: '0~1'
 #  textblock_w_percent_range: '0.3~1'
-  textblock_h_percent_range: '0.001~0.999'
+  textblock_h_percent_range: '0~1'
 #  textblock_h_percent_range: '0.8~0.92'
   letter_cnts_range: '1~900'
   textblock_letters_range: '1~1000'
@@ -139,6 +142,12 @@ bubble_condition:
   seg_line_range: '50~500'
   angle_px_step: 2,10
   WBN_tolerance: 10,30,15
+#   WBN_tolerance: 60,60,60
+  textline_hrange: '6~40'
+  line_multi_h: 25
+  line_edge_range: '1~20'
+  dot_line_h: 5
+  dot_h: 4
 char_condition:
   px_area_range: '10~30000'
   cnt_area_range: '10~30000'
@@ -157,8 +166,8 @@ bubble_recognize:
   padding: 10
   r_dot: 5
 bubble_seg:
-#  all_caps: true
-  all_caps: false
+#  use_dilate: true
+  use_dilate: false
 #  adapt_big_letter: true
   adapt_big_letter: false
 #  check_note: true
@@ -171,21 +180,27 @@ bubble_seg:
 #  use_pivot_split: false
 ocr_settings:
   discard_ratio: 0.08
-  bold_thres: 1.15
-#  bold_thres: 1.6
-  y_thres: 8
+#  y_thres: 8
+  y_thres: 3
   bit_thres: 127
-  font_size_range: '20~80'
-  font_size_rarange: '0.65~1.15'
-#  print_tables: true
+  min_char_area: 3
+  min_cnt_area: 9
+  white_thres: 200
+#  cal_method: 加权最小二乘法
+#  cal_method: 非负最小二乘法
+  cal_method: 加权非负最小二乘法
+#   print_tables: true
   print_tables: false
   #init_ocr: true
   init_ocr: false
   use_textwords: true
 #  use_textwords: false
-  stitch_spacing: 50
-#  merge_update: true
-  merge_update: false
+  line_spacing: 20
+  bubble_spacing: 50
+  merge_update: true
+#  merge_update: false
+  all_caps: true
+#  all_caps: false
 youdao:
   app_id:
   app_key:
@@ -230,9 +245,9 @@ color_patterns:
 color_pattern_dic:
   Comic:
     - 'ffffff-15~000000-60' # 白底黑字
-#    - 'ffffff-30~000000-120' # 白底黑字
-#    - '000000-15~ffffff-60' # 黑底白字
-#    - 'ffffff-60' # 白字
-#    - '000000-60' # 黑字
+#     - 'ffffff-30~000000-120' # 白底黑字
+#     - '000000-15~ffffff-60' # 黑底白字
+#     - 'ffffff-60' # 白字
+#     - '000000-60' # 黑字
   Manga:
 #    - 'ffffff-15~000000-60' # 白底黑字
