--- a/MomoHanhuaUserData/MomoTranslator_config.yml
+++ b/MomoHanhuaUserData/MomoTranslator_config.yml
@@ -324,13 +324,13 @@ color_patterns:
 #  - 'ffffff-15~9f2862-15' # 白底红字
 color_pattern_dic:
   Comic:
-#     - 'ffffff-10~000000-60' # 白底黑字
+    - 'ffffff-10~000000-60' # 白底黑字
 #     - '000000-5~ffffff-10' # 黑底白字
 #     - 'ffffff-30' # 白字
 #     - '000000-60' # 黑字
   Manga:
-#     - 'ffffff-15~000000-60' # 白底黑字
+    - 'ffffff-15~000000-60' # 白底黑字
 #     - '000000-5~ffffff-10' # 黑底白字
 #     - '000000-60' # 黑字
   Manhua:
-#     - 'ffffff-15~000000-60' # 白底黑字
+    - 'ffffff-15~000000-60' # 白底黑字
